fix: prevent currency from wrapping to new line

--- a/extension/css/content.css
+++ b/extension/css/content.css
@@ -1,3 +1,7 @@
 .aes-text-right {
 	text-align: right;
 }
+
+.aes-no-text-wrap {
+	white-space: nowrap;
+}
